--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="content">
                         <h4>Transmissão</h4>
-                        <p>A transmissão dos coronavírus costuma ocorrer pelo ar ou por contato pessoal com secreções contaminadas, como: gotículas de saliva; espirro; tosse; catarro; contato pessoal próximo </p>
+                        <p>A transmissão dos coronavírus costuma ocorrer pelo ar ou por contato pessoal com secreções contaminadas, como: gotículas de saliva; espirro; tosse; catarro; contato pessoal próximo. </p>
                     </div>
                 </div>
                 <div class="box ">
